--- a/index.html
+++ b/index.html
@@ -1,141 +1,185 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+<title>CSS Website Layout</title>
 <meta charset="utf-8">
-<title>module 2</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
 }
-h1 {
-  margin-bottom: 15px;
-  text-align:  center;
-}
-span {
-  clear: right;
-}
-@media (min-width: 792px) and (max-width: 1199px) {
-  #p1 {
-    width: 45%;
-    height: 45%;
-  }
-  #p2 {
-    width: 45%;
-  height: 45%;
-  }
-  #p3 {
-    width: 95%;
-    height: 90%;
-  }
-  
-  
-}
-@media (min-width:1200px)  {
-  #p1 {
-    width: 30%;
-    height: 30%;
-  }
-  #p2 {
-    width: 30%;
-  height: 30%;
-  }
-  #p3 {
-    width: 30%;
-    height: 30%;
-  }
-  
-  
-}
-@media (max-width: 791px) {
-  #p1 {
-    width: 80%;
-    height: 80%;
-  }
-  #p2 {
-    width: 80%;
-  height: 80%;
-  }
-  #p3 {
-    width:80% ;
-    height: 80%;
-  }
-  
-  
-}
+
 body {
-  
-  background-color: none;
-  
-  top: 60px;
+  margin: 0;
+  overflow: scroll;
 }
-.container{
-   position: relative;
-   top:60px;
-   margin: 15px; 
-  }
-p {
-  
-  height: 40%;
-  border: 1px solid black;
-  margin-bottom: 15px;
-  margin-left: 10px;
-  float: left;
-  margin-right:20px;
+
+/* Style the header */
+.header {
+  background-color: #f1f1f1;
+  padding: 10px;
+  display: hidden;
+  text-align: LEFT;
+
+   
+
 }
-.chicken {
-  color: black;
-  background-color: pink;
+
+
+/* Style the top navigation bar */
+.topnav {
+  text-align: center;
+  height: 50px;
+  overflow: hidden;
+  background-color: white;
+  display: block;
+  color:red;
+
+
 }
-.beef {
-  color: black;
-  background-color: red;
+h2 {
+  text-align: center;
 }
-.sushi {
-  font-size: 20px;
+
+/* Style the topnav links */
+.topnav a {
   float: center;
+  display: block;
   color: black;
-  background-color: yellow;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
-#p1 {
-  background-color: gray;
-  float:left;
 
-}
-#p2 {
-  background-color: gray;
+/* Change color on hover */
+
+
+/* Create three unequal columns that floats next to each other */
+.row {
+  float: left;
+  padding: 10px;
   
+
+}
+
+
+/* Left and right column */
+.column.side {
+  background-color: #ddd;
+  width: 90%;
+  opacity: .6;
+  display: block;
+}
+
+/* Middle column */
+.column.middle {
+  width: 90%;
+  opacity: .6;
+  background-color: #ddd;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
   
 }
-#p3 {
-  background-color: gray;
 
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column.side, .column.middle {
+    width: 100%;
+  }
+}
+img {
 
+  float:right;
  
-
 }
-/*#p4 {
-  background-color: yellow;
-  float:right;*/
+.dropbtn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  float :right; 
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
 }
 
 </style>
 </head>
 <body>
-<h1>Our Menu</h1>
 
-<div >
-  <p id="p1"><span class="chicken">chicken</span>
+<div class="header">
+  <h1>FOOD,LLC</h1><div class="dropdown">
+  <button class="dropbtn"> <img src="nv.png" height="30" width="30"></button>
+  <div class="dropdown-content">
+  <a href="#">chicken</a>
+  <a href="#">beef</a>
+  <a href="#">sushi</a>
+  </div>
+</div>
+  </div>
 
- <span> this paragraph is for chicken.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa perferendis enim, consequatur obcaecati iusto! Quia aliquam, obcaecati explicabo adipisci non. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa perferendis enim, consequatur obcaecati iusto! Quia aliquam, obcaecati explicabo adipisci non.
-     </span>     </p>
-  <p id="p2"><span class="beef">beef</span> this paragraph is for beef.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa perferendis enim, consequatur obcaecati iusto! Quia aliquam, obcaecati explicabo adipisci non. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa perferendis enim, consequatur obcaecati iusto! Quia aliquam, obcaecati explicabo adipisci non.
-      </p>
-  <p id="p3"><span class="sushi"> sushi</span> this paragraph is for sushi.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa perferendis enim, consequatur obcaecati iusto! Quia aliquam, obcaecati explicabo adipisci non. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa perferendis enim, consequatur obcaecati iusto! Quia aliquam, obcaecati explicabo adipisci non.
-      </p>
- 
+<div class="row">
+<div class="topnav">
+  <a href="https://wwww.google.com">OUR MENU</a>
 </div>
 
+
+
+  <div class="column side">
+
+    <h2>Side</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit..</p>
+  </div>
+  
+  <div class="column middle">
+    <h2>Main Content</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
+  </div>
+  
+  <div class="column side">
+    <h2>Side</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. You can use the overflow property when you want to have better control of the layout. The overflow property specifies what happens if content overflows an element's box.</p>
+  </div>
+</div>
+</div>
+
+  
 </body>
 </html>
+
