--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ img {
 
 <div class="header">
   <h1>FOOD,LLC</h1><div class="dropdown">
-  <button class="dropbtn"> <img src="nv.png" height="30" width="30"></button>
+  <button class="dropbtn"> <img src="sublime text/nv.png" height="30" width="30"></button>
   <div class="dropdown-content">
   <a href="#">chicken</a>
   <a href="#">beef</a>
