--- a/index.html
+++ b/index.html
@@ -1,79 +1,70 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>David Chu's China Bistro</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="as.css">
-    <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
-  </head>
-<body>
-  <header>
-    <nav id="header-nav" class="navbar navbar-default">
-      <div class="container">
-        <div class="navbar-header">
-          <a href="index.html" class="pull-left visible-md visible-lg">
-            <div id="logo-img"></div>
-          </a>
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+</head>
+<body class="navbar-expand-md bg-danger">
 
-          <div class="navbar-brand">
+<nav class="navbar navbar-expand-md bg-warning navbar-dark">
+  <a class="navbar-brand" href="#"><img src="rlogo.png" alt="logo" style="width:150px;"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="navbar-brand">
             <a href="index.html"><h1>David Chu's China Bistro</h1></a>
             <p>
-              <img src="images/star-k-logo.png" alt="Kosher certification">
+              <img src="ss.jpg" alt="Kosher certification" style="width: 20px;">
               <span>Kosher Certified</span>
             </p>
           </div>
-
-          <button id="navbarToggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        
-        <div id="collapsable-nav" class="collapse navbar-collapse">
-           <ul id="nav-list" class="nav navbar-nav navbar-right">
-            <li id="navHomeButton" class="visible-xs active">
-              <a href="index.html">
-                <span class="glyphicon glyphicon-home"></span> Home</a>
-            </li>
-            <li id="navMenuButton">
-              <a href="#" onclick="$dc.loadMenuCategories();">
+  <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
+    <ul class="navbar-nav" >
+      <li id="navMenuButton">
+              <a href="#" onclick="$dc.loadMenuCategories();"><img src="menu.jpg" width="30px">
                 <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
             </li>
-            <li>
-              <a href="#">
+            <li style="margin left: : 50px;">
+              <a href="#"><img src="about.png" width="30px">
                 <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> About</a>
             </li>
             <li>
-              <a href="#">
+              <a href="#"><img src="reward.png" width="40px">
                 <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Awards</a>
             </li>
             <li id="phone" class="hidden-xs">
               <a href="tel:410-602-5008">
                 <span>410-602-5008</span></a><div>* We Deliver</div>
             </li>
-          </ul><!-- #nav-list -->
-        </div><!-- .collapse .navbar-collapse -->
-      </div><!-- .container -->
-    </nav><!-- #header-nav -->
-  </header>
+    </ul>
+  </div>  
+</nav>
+<br>
 
-  <div id="call-btn" class="visible-xs">
-    <a class="btn" href="tel:410-602-5008">
-    <span class="glyphicon glyphicon-earphone"></span>
-    410-602-5008
-    </a>
-  </div>
-  <div id="xs-deliver" class="text-center visible-xs">* We Deliver</div>
-
-  <div id="main-content" class="container"></div>
-
-  <footer class="panel-footer">
+<div class="container ">
+  <aside class="phone  bg-warning justify-content-center text-center ">
+ <li id="phone " class="hidden-xs">
+              <a href="tel:410-602-5008">
+                <span>410-602-5008</span></a><div>* We Deliver</div>
+            </li>
+            </aside>
+            <br>
+            <article><img src="hotl.jpg" width="90%"></article>
+            <br>
+            <nav>
+              <div class="row">
+                <section id="menutile" class="col-sm-4"><a href="#"><img src="menu-tile.jpg">menu</a></section>
+                <section id="menutile" class="col-sm-4"><a href="#"><img src="specials-tile.jpg">special</a></section>
+                <section id="menutile" class="col-sm-4"><a href="https://goo.gl/maps/Gd7s1R7X4ZmjPVKK9"><img src="https://lh5.googleusercontent.com/p/AF1QipPkScTQRyCm2LjYywxg5aobg6z9seWvzcO1M-0a=w408-h356-k-no" width="300"> <p>map</p></a> </section>
+              </div>
+            </nav>
+            </div>
+<footer class="panel-footer ">
     <div class="container">
       <div class="row">
         <section id="hours" class="col-sm-4">
@@ -93,16 +84,15 @@
         <section id="testimonials" class="col-sm-4">
           <p>"The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!"</p>
           <p>"Amazing food! Great service! Couldn't ask for more! I'll be back again and again!"</p>
+          <hr class="visible-xs">
         </section>
       </div>
       <div class="text-center">&copy; Copyright David Chu's China Bistro 2016</div>
     </div>
   </footer>
 
-  <!-- jQuery (Bootstrap JS plugins depend on it) -->
-  <script src="js/jquery-2.1.4.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/ajax-utils.js"></script>
-  <script src="js/script.js"></script>
+
 </body>
 </html>
+
+
